fix tools collapsing issues fixes: - the tool collapse boundaries don't change with the stage size - the tool collapse boundaries weren't updated to match the new merge tools - increase minimum width so that a 960-wide stage on a 1366-wide screen doesn't mess up the cursor

--- a/src/components/paint-editor/paint-editor.css
+++ b/src/components/paint-editor/paint-editor.css
@@ -28,7 +28,7 @@
     flex-direction: row;
     height: 100%;
     padding-top: calc(5 * $grid-unit);
-    min-width: 524px;
+    min-width: 600px;
 }
 
 .row + .row {
